# WinGnome

./: .gitignore  CMakeLists.txt  README.md
assets/icons/: ATTRIBUTION.txt
assets/icons/adwaita/: ATTRIBUTION.txt
config/: bar.json  dock.json  shell.json
src/: TextureManager.cpp  TextureManager.hpp  app_icons.cpp  app_icons.h  audio_endpoint.cpp  audio_endpoint.h  audio_volume.cpp  audio_volume.h  bar.cpp  bar.h  bar_anim.cpp  bar_anim.h  bar_config.cpp  bar_config.h  bar_icons.cpp  bar_icons.h  bar_modules.cpp  bar_modules.h  bar_popup.cpp  bar_popup.h  battery_status.cpp  battery_status.h  desktop.cpp  desktop.h  dock.cpp  dock.h  dock_config.cpp  dock_config.h  dock_icons.cpp  dock_icons.h  icon_sprite.h  json.cpp  json.h  main.cpp  network_status.cpp  network_status.h  paths.cpp  paths.h  platform.h  shell.cpp  (+11 more)
src/gfx/: d2d_window.cpp  d2d_window.h  frame_timer.h  gfx_font.cpp  gfx_font.h  types.h
